# index_safe

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  burst_downloader.py  data.py  environment.yml  extract_burst.py  index.py  index_safe.py  indexed_safe.py  lambda_test.json  pyproject.toml  requirements_for_lambda.txt  template.yml  utils.py
.github/: CODEOWNERS
.github/workflows/: build-and-deploy-test.yml  build-and-deploy.yml  bump-version.yml  pytest.yml  release.yml  static-analysis.yml
src/etc/: entrypoint.sh
src/index_safe/: benchmark.py  bencmark.py  burst.xsl  create_index.py  extract_burst.py  extract_metadata.py  index.py  index_safe.py  invoke_extract_lambda.py  invoke_index_lambda.py  invoke_lambda.py  scratch.py  utils.py
src/index_safe/etc/: benchmark.py  mnt_benchmark.py
tests/: conftest.py  raw_01.slc.vrt  raw_08.slc.vrt  read_bin.py  safe_offsets.py  test_create_index.py  test_extract_burst.py  test_extract_metadata.py  test_index.py  test_index_safe.py  test_integration.py  test_utils.py  valid_01.slc.vrt  valid_08.slc.vrt  zip_offsets.py
tests/test_data/: S1A_IW_SLC__1SDV_20200604T022251_20200604T022318_032861_03CE65_7C85_IW2_VV_07.dflidx  valid_IW2_VV_00.vrt  valid_IW2_VV_7.vrt
