[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project]
name = "index_safe"
requires-python = ">=3.8"
dynamic = ["version"]
authors = [
    {name="Forrest Williams", email="ffwilliams2@alaska.edu"},
]
description = "Index Sentinel-1 SAFE for fast burst data and metdata download"
readme = "README.md"
classifiers=[
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
  "gdal",
  "boto3",
  "tqdm",
  "numpy",
  "requests",
  "lxml",
]

[project.urls]
Homepage = "https://github.com/forrestfwilliams/indexed_safe"
"Bug Tracker" ="https://github.com/forrestfwilliams/indexed_safe/issues"

[project.scripts]
create_index = "index_safe.create_index:main"
extract_burst = "index_safe.extract_burst:main"
extract_metadata = "index_safe.extract_metadata:main"

[project.optional-dependencies]
develop = [
    "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = '-ra -q -m "not integration"'
markers = ["integration"]
testpaths = ["tests"]

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyx?$'

[tool.ruff]
line-length = 120
